[metadata]
name = complex_schema
version = 0.0.1
author = Fekete Krisztian, CEU Microdata
author-email = feketek@ceu.hu
summary = Parse Complex's schema from R_export.txt.xls
description-file = README.md
license = Proprietary
home-page = https://github.com/ceumicrodata/complex_schema
requires-python = >=2.7
classifier =
	Development Status :: 3 - Alpha
    Environment :: Console
    License :: Other/Proprietary License


[files]
modules =
    complex_schema


[entry_points]
console_scripts =
	dump-complex-schema = complex_schema:main
